fix(expenses): overflow scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,12 @@ a {
 * ,main{
   box-sizing: border-box;
 }
+
+:-webkit-scrollbar {
+  display: none;
+}
+
+*{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+}
